<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_baseline_fastfood_24"
        android:title="Home"
        app:cnb_backgroundColor="@color/colorPrimary"/>

    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/ic_baseline_receipt_24"
        android:title="@string/title_order"
        app:cnb_backgroundColor="@color/colorPrimary"/>

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_shopping_cart_white_24"
        android:title="@string/title_cart"
        app:cnb_backgroundColor="@color/colorPrimary"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_white_24"
        android:title="@string/title_profile"
        app:cnb_backgroundColor="@color/colorPrimary"/>
</menu>